--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Meta -->
-    <title>Home</title>
+    <title>Capítulo Javeriano ACM</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- RSS -->
-    <link rel="alternate" type="application/rss+xml" title="The Stanford ACM" href="feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Capítulo Javeriano ACM" href="feed.xml" />
 
     <!-- Analytics -->
     <script type="text/javascript">
@@ -46,19 +46,17 @@
 
     <aside class="sidebar-left">
         <div class="logo">
-            <svg width="75" height="75" viewBox="0 0 180 180">
-      <path id="logo" fill="#cc0000" d="m2.66667,4.08333l0,27.22017l116.4,57.7307l-116.4,58.92719l0,27.22018l171.00002,-86.44649l-171.00002,-84.65176z"/>
-    </svg>
+          <img src="images/acm_logo.png" width="40%" alt="ACM Javeriana">
         </div>
         <div class="title">
-            <h1>The Stanford ACM</h1>
+            <h1>Javeriana ACM</h1>
             <h4>Association for Computing Machinery</h4>
         </div>
         <div class="links">
-            <a name="home" href="index.html">events</a>
-            <a name="about" href="#" onclick="$dc.loadAbout();" >about</a>
-            <a name="contact" href="#" onclick="$dc.loadContact();" >contact</a>
-            <a name="officers" href="#" onclick="$dc.loadOfficers();" >officers</a>
+            <a name="home" href="index.html">eventos</a>
+            <a name="about" href="#" onclick="$dc.loadAbout();" >conócenos</a>
+            <a name="contact" href="#" onclick="$dc.loadContact();" >contacto</a>
+            <a name="officers" href="#" onclick="$dc.loadOfficers();" >junta</a>
         </div>
     </aside>
 
