--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="icon" href="favicon.ico" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata|Rubik|Nunito|Open+Sans:400,700" />
+    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata|Rubik|Nunito|Open+Sans:400,700" /> -->
+
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
