Added email service

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 
     <!-- Snap.svg for Easter Egg -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function(){
+        emailjs.init("user_HkwyqfCTIG84cjvSnaq2V");
+      })();
+    </script>
 </head>
 
 <body>
