Added form to contact us

--- a/snippets/contact.html
+++ b/snippets/contact.html
@@ -1,7 +1,33 @@
 <section>
-    <h1>Get in Touch!</h1>
+    <h1>¡Contáctanos!</h1>
 
-    <p>The Stanford chapter of the ACM currently has 1000+ members. We serve the Stanford community by organizing numerous industry, academic, and social events each quarter.</p>
+    <p>Servimos a la comunidad Javeriana organizando numerosos eventos
+      industriales, académicos y sociales cada semestre.
+      <br>
+      En este espacio te puedes acercar al Capítulo Javeriano ACM.
+      <br>
+      <ul>
+        <li>¿Quieres saber más acerca de nosotros?</li>
+        <li>¿Tienes alguna actividad en mente?</li>
+        <li>¿Tienes alguna pregunta para la junta del Capítulo?</li>
+      </ul>
+    </p>
+    <p>
+      Te invitamos a diligenciar el siguiente formulario y próximamente te
+      responderemos de vuelta.
+    </p>
 
-    <p>To get in touch, send us an email at <a href="mailto:acm-officers@lists.stanford.edu">acm-officers@lists.stanford.edu</a> and we'll follow up! Or simply join our <a href="https://mailman.stanford.edu/mailman/listinfo/acm-members">mailing list</a>.</p>
+    <p>Puedes comunicarte por nuestro correo: <a href="mailto:acm@javeriana.edu.co">acm@javeriana.edu.co</a>.</p>
+
+    <header>CONTACTO</header>
+
+    <form id="form" class="topBefore">
+
+        <input id="name" type="text" placeholder="NOMBRE">
+        <input id="email" type="text" placeholder="E-MAIL">
+        <textarea id="message" type="text" placeholder="MENSAJE"></textarea>
+        <input id="submit" type="submit" value="¡ENVIAR!">
+
+    </form>
+
 </section>
