--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata|Rubik|Nunito|Open+Sans:400,700" /> -->
 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/main.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
