Added form functionality

--- a/snippets/contact.html
+++ b/snippets/contact.html
@@ -21,12 +21,12 @@
 
     <header>CONTACTO</header>
 
-    <form id="form" class="topBefore">
+    <form id="contactForm" class="topBefore">
 
         <input id="name" type="text" placeholder="NOMBRE">
         <input id="email" type="text" placeholder="E-MAIL">
         <textarea id="message" type="text" placeholder="MENSAJE"></textarea>
-        <input id="submit" type="submit" value="¡ENVIAR!">
+        <input id="submit" value="¡ENVIAR!" onclick="$formObj.submit();">
 
     </form>
 
