--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <script src="js/script.js"></script>
     <script src="js/ajax-utils.js"></script>
     <script src="js/domLoader.js"></script>
+    <script src="js/form.js"></script>
 
 </body>
 
