--- a/snippets/about.html
+++ b/snippets/about.html
@@ -1,22 +1,27 @@
-<section>
-    <h1>About</h1>
 
-    <p>ACM is Stanford’s premier computer science organization. We are a community of passionate students who build exciting projects to tackle challenging technical and social problems. Over time, self-starting individuals have created an enduring culture
-        evidenced by a wide-range of ACM projects in recent years -- most notably YouTube Instant, the predecessor to YouTube’s current autocomplete feature, as well as the technology behind acquired startups Fancy That (Palantir, 2015) and PeerCDN (Yahoo,
-        2013).</p>
+<section>
+    <h1>¿Quiénes Somos?</h1>
+    <p>Somos un grupo de estudiantes, egresados y profesores de la Pontificia Universidad Javeriana. Nuestra intención es promover una comunidad en la cual todos sus integrantes ofrezcan y se beneficien de los servicios ofrecidos por los demás. Estos servicios
+        están enmarcados dentro de los proyectos del capítulo que pueden ser de grupos de estudio, cursos, eventos entre otras actividades que no necesariamente están orientados al ámbito académico sino que pueden ser sociales, deportivos o de beneficencia.</p>
+    <h2>¿Que queremos?</h2>
+    <p>Queremos mejorar los mecanismos de aprendizaje de los estudiantes de la universidad a partir de las herramientas que la ACM nos proporciona, del mismo modo, nuestra finalidad es incrementar el grado de interés de los estudiantes en sus actividades
+        académicas y profesionales.
+        <br>
+    Deseamos ser el punto central de la comunidad de Ingeniería de Sistemas de la Pontificia Universidad Javeriana.</p>
+    <h2>Nuestro proposito</h2>
+    <p>Nuestro propósito es ser el Capítulo número uno en Colombia en términos de eventos, conferencias, publicaciones y proyectos.</p>
+
 </section>
 
 <section>
-    <h1>Activities</h1>
+    <h1>Actividades</h1>
 
-    <h2><a>ACM.IO Speaker Series</a></h2>
-    <p>The ACM.IO speaker series exposes a highly technical audience of computer science and engineering students to emerging technologies used in industry. Past speaker series included presentations about React, Semantic UI, Angular2, Ember.js, machine
-        learning, and other technical topics.</p>
+    <h2><a>Maratones de programacion</a></h2>
+    <p>La programación competitiva es un deporte mental que generalmente se lleva a cabo a través de Internet o una red local, involucrando a los participantes tratando de programar de acuerdo con las especificaciones proporcionadas.</p>
 
-    <h2><a>Enigma Puzzlehunt</a></h2>
-    <p>Engima Puzzlehunt is a timed problem-solving challenge geared towards students interested in puzzle-solving and computer science. Over the course of a day, students will form groups and solve logic puzzles, brain teasers, and coding challenges for
-        prizes.</p>
+    <h2><a>Talleres</a></h2>
+    <p>Talleres de programacion de difentes temas, para perfeccionar las habilidades adquiridas en la carrera.</p>
 
-    <h2><a>Escape the Room</a></h2>
-    <p>Escape the Room is physical adventure game in which players are locked in a room and have to use elements of the room to solve a series of puzzles and escape within a set time limit.</p>
+    <h2><a>An hour of code</a></h2>
+    <p>Actividad realizada por los miembros del capitulo para los niños en donde se enseña a programar de una manera divertida, es una inicitiva incetivada por la campaña code.org.</p>
 </section>
