Added officers page

--- a/snippets/officers.html
+++ b/snippets/officers.html
@@ -1,7 +1,33 @@
 <section>
-    <h1>Junta</h1>
-    <form>
-    <button onclick="$dc.foo();">Continue</button>
-</form>
-</form>
+  <h1>Conoce La Junta</h1>
+
+  <h2>Precidente</h2>
+  <h3>Nombre: Juan Pablo Rodriguez</h3>
+  <h3>Correo: <a href="mailto:jrodriguezn@javeriana.edu.co">jrodriguezn@javeriana.edu.co</a></h3>
+  <br>
+
+  <h2>Viceprecidente y Tesorero</h2>
+  <h3>Nombre: Juan Pablo Peñaloza</h3>
+  <h3>Correo: <a href="mailto:juan-penaloza@javeriana.edu.co">juan-penaloza@javeriana.edu.co</a></h3>
+  <br>
+
+  <h2>Secretario y Líder Maravia</h2>
+  <h3>Nombre: Johan Murillo</h3>
+  <h3>Correo: <a href="mailto:johanmurillo@javeriana.edu.co">johanmurillo@javeriana.edu.co</a></h3>
+  <br>
+
+  <h2>Community Manager</h2>
+  <h3>Nombre: Alfredo Santamaria</h3>
+  <h3>Correo: <a href="mailto:alfredo.santamaria@javeriana.edu.co">alfredo.santamaria@javeriana.edu.co</a></h3>
+  <br>
+
+  <h2>Líder Publicidad</h2>
+  <h3>Nombre: Juan David Rodriguez</h3>
+  <h3>Correo: <a href="mailto:jd_rodrigueza@javeriana.edu.co">jd_rodrigueza@javeriana.edu.co</a></h3>
+  <br>
+
+  <h2>Asesor Junta</h2>
+  <h3>Nombre: Daniela Cortes</h3>
+  <h3>Correo: <a href="mailto:jrodriguezn@javeriana.edu.co">jrodriguezn@javeriana.edu.co</a></h3>
+
 </section>
