--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <a id="aboutId" class="sideLink" name="about" href="#" onclick="$dc.loadAbout();" >conócenos</a>
             <a id="contId"  class="sideLink" name="contact" href="#" onclick="$dc.loadContact();" >contacto</a>
             <a id="officersId" class="sideLink" name="officers" href="#" onclick="$dc.loadOfficers();" >junta</a>
+            <a id="calendarId" class="sideLink" name="calendar" href="#" onclick="$dc.loadCalendar();" >calendario</a>
         </div>
     </aside>
 
