--- a/snippets/about.html
+++ b/snippets/about.html
@@ -1,27 +1,46 @@
 
 <section>
     <h1>¿Quiénes Somos?</h1>
-    <p>Somos un grupo de estudiantes, egresados y profesores de la Pontificia Universidad Javeriana. Nuestra intención es promover una comunidad en la cual todos sus integrantes ofrezcan y se beneficien de los servicios ofrecidos por los demás. Estos servicios
-        están enmarcados dentro de los proyectos del capítulo que pueden ser de grupos de estudio, cursos, eventos entre otras actividades que no necesariamente están orientados al ámbito académico sino que pueden ser sociales, deportivos o de beneficencia.</p>
+    <p>Somos un grupo de estudiantes, egresados y profesores de la Pontificia
+      Universidad Javeriana. Nuestra intención es promover una comunidad en
+      a cual todos sus integrantes ofrezcan y se beneficien de los servicios
+      ofrecidos por los demás. Estos servicios están enmarcados dentro de los
+      proyectos del capítulo que pueden ser de grupos de estudio, cursos,
+      eventos entre otras actividades que no necesariamente están orientados
+      al ámbito académico sino que pueden ser sociales, deportivos o de
+      beneficencia.</p>
     <h2>¿Que queremos?</h2>
-    <p>Queremos mejorar los mecanismos de aprendizaje de los estudiantes de la universidad a partir de las herramientas que la ACM nos proporciona, del mismo modo, nuestra finalidad es incrementar el grado de interés de los estudiantes en sus actividades
-        académicas y profesionales.
-        <br>
-    Deseamos ser el punto central de la comunidad de Ingeniería de Sistemas de la Pontificia Universidad Javeriana.</p>
+    <p>Queremos mejorar los mecanismos de aprendizaje de los estudiantes de la
+      universidad a partir de las herramientas que la ACM nos proporciona, del
+      mismo modo, nuestra finalidad es incrementar el grado de interés de los
+      estudiantes en sus actividades académicas y profesionales.
+      <br>
+      Deseamos ser el punto central de la comunidad de Ingeniería de Sistemas
+      de la Pontificia Universidad Javeriana.
+    </p>
     <h2>Nuestro proposito</h2>
-    <p>Nuestro propósito es ser el Capítulo número uno en Colombia en términos de eventos, conferencias, publicaciones y proyectos.</p>
+    <p>Nuestro propósito es ser el Capítulo número uno en Colombia en términos
+      de eventos, conferencias, publicaciones y proyectos.</p>
 
 </section>
 
 <section>
     <h1>Actividades</h1>
 
-    <h2><a>Maratones de programacion</a></h2>
-    <p>La programación competitiva es un deporte mental que generalmente se lleva a cabo a través de Internet o una red local, involucrando a los participantes tratando de programar de acuerdo con las especificaciones proporcionadas.</p>
+    <h2><a>Maratones de Programacion</a></h2>
+    <p>La programación competitiva es un deporte mental que generalmente se
+      lleva a cabo a través de Internet o una red local, involucrando a los
+      participantes tratando de programar de acuerdo con las especificaciones
+      proporcionadas.
+    </p>
 
     <h2><a>Talleres</a></h2>
-    <p>Talleres de programacion de difentes temas, para perfeccionar las habilidades adquiridas en la carrera.</p>
+    <p>Talleres de programacion de difentes temas, para perfeccionar las
+      habilidades adquiridas en la carrera y trabajar en projectos interesantes
+      para mejorar nuestras habilidades técnicas.</p>
 
     <h2><a>An hour of code</a></h2>
-    <p>Actividad realizada por los miembros del capitulo para los niños en donde se enseña a programar de una manera divertida, es una inicitiva incetivada por la campaña code.org.</p>
+    <p>Una actividad realizada por los miembros del capitulo para los niños en 
+      donde se enseña a programar de una manera divertida, es una inicitiva
+      incetivada por la campaña code.org.</p>
 </section>
