--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="ACM brings together students with an interest in building cool things with computer science.">
     <link rel="canonical" href="index.html">
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="logo.ico" />
 
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata|Rubik|Nunito|Open+Sans:400,700" /> -->
