--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h4>Association for Computing Machinery</h4>
         </div>
         <div class="links">
-            <a id="homeId" class="sideLink" name="home" href="index.html" class="selected">eventos</a>
+            <a id="homeId" class="selected" name="home" href="index.html">eventos</a>
             <a id="aboutId" class="sideLink" name="about" href="#" onclick="$dc.loadAbout();" >conócenos</a>
             <a id="contId"  class="sideLink" name="contact" href="#" onclick="$dc.loadContact();" >contacto</a>
             <a id="officersId" class="sideLink" name="officers" href="#" onclick="$dc.loadOfficers();" >junta</a>
