Add SN side bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/social.css">
     <link rel="stylesheet" href="css/main.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -69,6 +70,14 @@
             <a id="calendarId" class="sideLink" name="calendar" href="#" onclick="$dc.loadCalendar();" >calendario</a>
         </div>
     </aside>
+
+    <aside id="sticky-social">
+    <ul>
+        <li><a href="https://www.facebook.com/acmjaveriana/" class="entypo-facebook" target="_blank"><span>Facebook</span></a></li>
+        <li><a href="https://twitter.com/ACMJaveriana" class="entypo-twitter" target="_blank"><span>Twitter</span></a></li>
+        <li><a href="https://github.com/CapituloJaverianoACM" class="entypo-github" target="_blank"><span>Github</span></a></li>
+    </ul>
+</aside>
 
     <div class="page-content">
 
