--- a/snippets/events.html
+++ b/snippets/events.html
@@ -1,29 +1,5 @@
-<div class="event">
-    <div class="headline">
-        <span>ACM Puzzlehunt</span>
-        <p>Let us know you're interested at <a href="http://enigma.stanfordacm.com">enigma.stanfordacm.com</a></p>
-    </div>
-    <div class="meta">
-        <span class="date">
-      <i class="fa fa-calendar-o"></i>
-      <span>Jan 28, 2017</span>
-        </span>
-        <span class="time">
-      <i class="fa fa-clock-o"></i>
-      <span>11:00 a.m.</span>
-        </span>
-        <span class="loc">
-      <i class="fa fa-map-marker"></i>
-      <span>Stanford Oval</span>
-        </span>
-        <span class="rsvp">
-      <i class="fa fa-facebook"></i>
-      <span><a href="http://bit.ly/stanford-puzzlehunt">RSVP</a></span>
-        </span>
-    </div>
-</div>
 
-<div class="event">
+<!-- <div class="event">
     <div class="headline">
         <span>Yinglian Xie</span>
         <span>DataVisor</span>
@@ -46,149 +22,18 @@
       <i class="fa fa-facebook"></i>
       <span><a href="https://goo.gl/forms/lRj855jvujvRWpT12">RSVP</a></span>
         </span>
-    </div>
-</div>
-
+    </div> -->
+<!-- </div> -->
 <div class="event">
     <div class="headline">
-        <span>Edmond Lau</span>
-        <span>Quip</span>
-        <p>Author of <i>The Effective Engineer</i></p>
+        <span>Reunion nuevos ACM</span>
+        <span>ACM</span>
+        <p>Introduccion a las personas interesadas en ingresar al Capitulo Javeriano ACM</p>
     </div>
     <div class="meta">
         <span class="date">
       <i class="fa fa-calendar-o"></i>
-      <span>Nov 7, 2016</span>
-        </span>
-        <span class="time">
-      <i class="fa fa-clock-o"></i>
-      <span>6:00 p.m.</span>
-        </span>
-        <span class="loc">
-      <i class="fa fa-map-marker"></i>
-      <span>Hewlett 102</span>
-        </span>
-        <span class="rsvp">
-      <i class="fa fa-facebook"></i>
-      <span><a href="https://goo.gl/forms/0NPdcKhIefGn3rFe2">RSVP</a></span>
-        </span>
-    </div>
-</div>
-
-<div class="event">
-    <div class="headline">
-        <span>Rasmus Rygaard</span>
-        <span>Stripe</span>
-        <p>How To Build An API</p>
-    </div>
-    <div class="meta">
-        <span class="date">
-      <i class="fa fa-calendar-o"></i>
-      <span>Nov 2, 2016</span>
-        </span>
-        <span class="time">
-      <i class="fa fa-clock-o"></i>
-      <span>6:00 p.m.</span>
-        </span>
-        <span class="loc">
-      <i class="fa fa-map-marker"></i>
-      <span>Gates 415</span>
-        </span>
-        <span class="rsvp">
-      <i class="fa fa-facebook"></i>
-      <span><a href="https://goo.gl/forms/jtir80lmn5sHJwBx1">RSVP</a></span>
-        </span>
-    </div>
-</div>
-
-<div class="event">
-    <div class="headline">
-        <span>Edward Wu</span>
-        <span>Niantic</span>
-        <p>The Technology Behind Pokémon GO</p>
-    </div>
-    <div class="meta">
-        <span class="date">
-      <i class="fa fa-calendar-o"></i>
-      <span>Oct 24, 2016</span>
-        </span>
-        <span class="time">
-      <i class="fa fa-clock-o"></i>
-      <span>6:00 p.m.</span>
-        </span>
-        <span class="loc">
-      <i class="fa fa-map-marker"></i>
-      <span>Y2E2 111</span>
-        </span>
-        <span class="rsvp">
-      <i class="fa fa-facebook"></i>
-      <span><a href="https://goo.gl/forms/Wc3t5izRzDoa0yPu2">RSVP</a></span>
-        </span>
-    </div>
-</div>
-
-<div class="event">
-    <div class="headline">
-        <span>Chris Garrett</span>
-        <span>Addepar</span>
-        <p>Ember.js, a framework for creating ambitious web applications</p>
-    </div>
-    <div class="meta">
-        <span class="date">
-      <i class="fa fa-calendar-o"></i>
-      <span>Oct 20, 2016</span>
-        </span>
-        <span class="time">
-      <i class="fa fa-clock-o"></i>
-      <span>6:00 p.m.</span>
-        </span>
-        <span class="loc">
-      <i class="fa fa-map-marker"></i>
-      <span>200-203 (History Corner)</span>
-        </span>
-        <span class="rsvp">
-      <i class="fa fa-facebook"></i>
-      <span><a href="https://goo.gl/forms/p8BG9fMVzpZ3u7Ks1">RSVP</a></span>
-        </span>
-    </div>
-</div>
-
-<div class="event">
-    <div class="headline">
-        <span>James Judd</span>
-        <span>Lucidchart</span>
-        <p>TypeScript, Angular2, & Google Closure</p>
-    </div>
-    <div class="meta">
-        <span class="date">
-      <i class="fa fa-calendar-o"></i>
-      <span>Oct 10, 2016</span>
-        </span>
-        <span class="time">
-      <i class="fa fa-clock-o"></i>
-      <span>6:00 p.m.</span>
-        </span>
-        <span class="loc">
-      <i class="fa fa-map-marker"></i>
-      <span>Y2E2 111</span>
-        </span>
-        <span class="rsvp">
-      <i class="fa fa-facebook"></i>
-      <span><a href="https://goo.gl/forms/fp0qbxqVtzkFGgaL2">RSVP</a></span>
-        </span>
-    </div>
-</div>
-
-<div class="event">
-    <div class="headline">
-        <span>Stanford Local Programming Contest</span>
-        <span>ACM-ICPC</span>
-        <p>Coders of all experience levels are welcome!</p>
-    </div>
-    <div class="meta">
-        <span class="date">
-      <i class="fa fa-calendar-o"></i>
-      <span>Oct 1, 2016</span>
+      <span>Feb 2, 2017</span>
         </span>
         <span class="time">
       <i class="fa fa-clock-o"></i>
@@ -196,37 +41,213 @@
         </span>
         <span class="loc">
       <i class="fa fa-map-marker"></i>
-      <span>Gates B08/B12/B30</span>
+      <span>No asignado</span>
         </span>
         <span class="rsvp">
       <i class="fa fa-facebook"></i>
-      <span><a href="http://cs.stanford.edu/group/acm/SLPC/">RSVP</a></span>
+      <span><a href="">NA</a></span>
         </span>
     </div>
-</div>
+ </div>
 
 <div class="event">
     <div class="headline">
-        <span>Jack Lukic</span>
-        <span>Qualia</span>
-        <p>User-interface Best Practices with Semantic UI</p>
+        <span>Reunion nuevos Maratones</span>
+        <span>Lider maratones</span>
+        <p>Introduccion a las personas interesadas en ingresar al grupo de maratones</p>
     </div>
     <div class="meta">
         <span class="date">
       <i class="fa fa-calendar-o"></i>
-      <span>Feb 3, 2016</span>
+      <span>Feb 4, 2017</span>
         </span>
         <span class="time">
       <i class="fa fa-clock-o"></i>
-      <span>6:00 p.m.</span>
+      <span>1:00 p.m.</span>
         </span>
         <span class="loc">
       <i class="fa fa-map-marker"></i>
-      <span>Y2E2 111</span>
+      <span>sala base de datos/ facultad de ingenieria</span>
         </span>
         <span class="rsvp">
       <i class="fa fa-facebook"></i>
-      <span><a href="https://www.facebook.com/events/1525471317745171/">RSVP</a></span>
+      <span><a href="">NA</a></span>
         </span>
     </div>
-</div>
+ </div>
+
+ <div class="event">
+     <div class="headline">
+         <span>Curso Ionic</span>
+         <span>Alfredo Santamaria</span>
+         <p>Taller Ionic para desarrollo movil</p>
+     </div>
+     <div class="meta">
+         <span class="date">
+       <i class="fa fa-calendar-o"></i>
+       <span>Feb 9, 2017</span>
+         </span>
+         <span class="time">
+       <i class="fa fa-clock-o"></i>
+       <span>6:00 p.m.</span>
+         </span>
+         <span class="loc">
+       <i class="fa fa-map-marker"></i>
+       <span>sala base de datos/ facultad de ingenieria</span>
+         </span>
+         <span class="rsvp">
+       <i class="fa fa-facebook"></i>
+       <span><a href="">NA</a></span>
+         </span>
+     </div>
+  </div>
+ <div class="event">
+     <div class="headline">
+         <span>Maraton RPC</span>
+         <span>RPC</span>
+         <p>Primera maraton de la red de programacion competitiva</p>
+     </div>
+     <div class="meta">
+         <span class="date">
+       <i class="fa fa-calendar-o"></i>
+       <span>Feb 11, 2017</span>
+         </span>
+         <span class="time">
+       <i class="fa fa-clock-o"></i>
+       <span>1:00 p.m.</span>
+         </span>
+         <span class="loc">
+       <i class="fa fa-map-marker"></i>
+       <span>sala base de datos/ facultad de ingenieria</span>
+         </span>
+         <span class="rsvp">
+       <i class="fa fa-facebook"></i>
+       <span><a href="">NA</a></span>
+         </span>
+     </div>
+  </div>
+ <div class="event">
+     <div class="headline">
+         <span>Maraton interna</span>
+         <span>Grupo Sabotaje</span>
+         <p>Maraton integracion para los miembros de la carrera</p>
+     </div>
+     <div class="meta">
+         <span class="date">
+       <i class="fa fa-calendar-o"></i>
+       <span>Feb 18, 2017</span>
+         </span>
+         <span class="time">
+       <i class="fa fa-clock-o"></i>
+       <span>12:00 p.m.</span>
+         </span>
+         <span class="loc">
+       <i class="fa fa-map-marker"></i>
+       <span>sala base de datos-Facultad/ sala de programacion - Baron</span>
+         </span>
+         <span class="rsvp">
+       <i class="fa fa-facebook"></i>
+       <span><a href="">NA</a></span>
+         </span>
+     </div>
+  </div>
+ <div class="event">
+     <div class="headline">
+         <span>Taller GitHub</span>
+         <span>Juan Pablo Rodriguez</span>
+         <p>Taller basico para utilizar GitHub</p>
+     </div>
+     <div class="meta">
+         <span class="date">
+       <i class="fa fa-calendar-o"></i>
+       <span>Feb 23, 2017</span>
+         </span>
+         <span class="time">
+       <i class="fa fa-clock-o"></i>
+       <span>6:00 p.m.</span>
+         </span>
+         <span class="loc">
+       <i class="fa fa-map-marker"></i>
+       <span>sala base de datos/ facultad de ingenieria</span>
+         </span>
+         <span class="rsvp">
+       <i class="fa fa-facebook"></i>
+       <span><a href="">NA</a></span>
+         </span>
+     </div>
+  </div>
+ <div class="event">
+     <div class="headline">
+         <span>Taller Pensamiento</span>
+         <span>Juan Pablo Peñaloza/Juan David Rodriguez</span>
+         <p>Taller de repaso para pensamiento 1era sesion</p>
+     </div>
+     <div class="meta">
+         <span class="date">
+       <i class="fa fa-calendar-o"></i>
+       <span>Feb 28, 2017</span>
+         </span>
+         <span class="time">
+       <i class="fa fa-clock-o"></i>
+       <span>1:00 p.m.</span>
+         </span>
+         <span class="loc">
+       <i class="fa fa-map-marker"></i>
+       <span>No asignado</span>
+         </span>
+         <span class="rsvp">
+       <i class="fa fa-facebook"></i>
+       <span><a href="">NA</a></span>
+         </span>
+     </div>
+  </div>
+ <div class="event">
+     <div class="headline">
+         <span>Taller Pensamiento</span>
+         <span>Juan Pablo Peñaloza/Juan David Rodriguez</span>
+         <p>Taller de repaso para pensamiento 2era sesion</p>
+     </div>
+     <div class="meta">
+         <span class="date">
+       <i class="fa fa-calendar-o"></i>
+       <span>Mar 1, 2017</span>
+         </span>
+         <span class="time">
+       <i class="fa fa-clock-o"></i>
+       <span>1:00 p.m.</span>
+         </span>
+         <span class="loc">
+       <i class="fa fa-map-marker"></i>
+       <span>No asignado</span>
+         </span>
+         <span class="rsvp">
+       <i class="fa fa-facebook"></i>
+       <span><a href="">NA</a></span>
+         </span>
+     </div>
+  </div>
+ <div class="event">
+     <div class="headline">
+         <span>Taller Pensamiento</span>
+         <span>Juan Pablo Peñaloza/Juan David Rodriguez</span>
+         <p>Taller de repaso para pensamiento 1era sesion</p>
+     </div>
+     <div class="meta">
+         <span class="date">
+       <i class="fa fa-calendar-o"></i>
+       <span>Mar 2, 2017</span>
+         </span>
+         <span class="time">
+       <i class="fa fa-clock-o"></i>
+       <span>1:00 p.m.</span>
+         </span>
+         <span class="loc">
+       <i class="fa fa-map-marker"></i>
+       <span>No asignado</span>
+         </span>
+         <span class="rsvp">
+       <i class="fa fa-facebook"></i>
+       <span><a href="">NA</a></span>
+         </span>
+     </div>
+  </div>
