--- a/snippets/officers.html
+++ b/snippets/officers.html
@@ -1,12 +1,12 @@
 <section>
   <h1>Conoce La Junta</h1>
 
-  <h2>Precidente</h2>
+  <h2>Presidente</h2>
   <h3>Nombre: Juan Pablo Rodriguez</h3>
   <h3>Correo: <a href="mailto:jrodriguezn@javeriana.edu.co">jrodriguezn@javeriana.edu.co</a></h3>
   <br>
 
-  <h2>Viceprecidente y Tesorero</h2>
+  <h2>Vicepresidente y Tesorero</h2>
   <h3>Nombre: Juan Pablo Peñaloza</h3>
   <h3>Correo: <a href="mailto:juan-penaloza@javeriana.edu.co">juan-penaloza@javeriana.edu.co</a></h3>
   <br>
