--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata|Rubik|Nunito|Open+Sans:400,700" /> -->
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/social.css">
